# BorgPilot

./: .gitignore  CMakeLists.txt  README.md  br.com.vcplinux.qborgpilot.policy  config.h.in  git-user-id.txt  licence.h  qBorgPilot.desktop  textos-readme.txt
src/: Doxyfile  abstracttablemodel_settings_p.cc  abstracttablemodel_settings_p.h  abstracttableview_settings.cc  abstracttableview_settings.h  arguments.cc  arguments.h  bashhighlighterlite.cc  bashhighlighterlite.h  bashscriptgenerator.cc  bashscriptgenerator.cpp  bashscriptgenerator.h  bashscriptrunner.cc  bashscriptrunner.h  bashscripttemplates.cc  bashscripttemplates.h  borginfocommandparser.cc  borginfocommandparser.h  borgrunnerthread.cc  borgrunnerthread.h  combobox_scriptcreatename_p.cc  combobox_scriptcreatename_p.h  comboboxcmdoptions_p.cc  comboboxcmdoptions_p.h  comboboxscriptname_p.cc  comboboxscriptname_p.h  command2.cc  command2.h  commands.cc  commands.h  createdefaultborgconffile.cc  createdefaultborgconffile.h  dashboardata.h  dialogShowFilesModes.h  dialogabout.cc  dialogabout.h  dialogabout.ui  dialogfindreqexternaltools.cc  dialogfindreqexternaltools.h  dialogfindreqexternaltools.ui  (+94 more)
src/INSTALL/: qBorgPilot.spec
src/doc/: README.md
src/doc/screenshots/: README.md
src/images/: borgpilot_64x64.xcf
